[gd_scene load_steps=31 format=2]

[ext_resource path="res://HUD/upperpanel.gd" type="Script" id=1]
[ext_resource path="res://assets/wbc/template.png" type="Texture" id=2]
[ext_resource path="res://font1/Blanka-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/wave.png" type="Texture" id=4]
[ext_resource path="res://font1/Android 101.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/buttons/menuList.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/menuListPressed.png" type="Texture" id=7]
[ext_resource path="res://assets/gold.png" type="Texture" id=8]
[ext_resource path="res://assets/dragged_off.png" type="Texture" id=9]
[ext_resource path="res://assets/dragged_on.png" type="Texture" id=10]
[ext_resource path="res://assets/menuscreen/background.png" type="Texture" id=11]
[ext_resource path="res://assets/menuscreen/savegame.png" type="Texture" id=12]
[ext_resource path="res://assets/menuscreen/new_game.png" type="Texture" id=13]
[ext_resource path="res://assets/menuscreen/quit.png" type="Texture" id=14]
[ext_resource path="res://assets/menuscreen/pause.png" type="Texture" id=15]
[ext_resource path="res://assets/menuscreen/play.png" type="Texture" id=16]
[ext_resource path="res://assets/logo/LOGO.png" type="Texture" id=17]
[ext_resource path="res://assets/tower1/neu_view.png" type="Texture" id=18]
[ext_resource path="res://assets/tower1/neu_view_disabled.png" type="Texture" id=19]
[ext_resource path="res://assets/tower1/mono_view.png" type="Texture" id=20]
[ext_resource path="res://assets/tower1/mono_view_disabled.png" type="Texture" id=21]
[ext_resource path="res://assets/tower1/baso_view.png" type="Texture" id=22]
[ext_resource path="res://assets/tower1/baso_view_disabled.png" type="Texture" id=23]
[ext_resource path="res://assets/tower1/eos_view.png" type="Texture" id=24]
[ext_resource path="res://assets/tower1/eos_view_disabled.png" type="Texture" id=25]
[ext_resource path="res://assets/tower1/lymp_view.png" type="Texture" id=26]
[ext_resource path="res://assets/tower1/lymp_view_disabled.png" type="Texture" id=27]

[sub_resource type="DynamicFont" id=1]
size = 255
outline_size = 6
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="UPPERPANEl" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Level" type="Sprite" parent="."]
position = Vector2( 43.2391, 46.4402 )
scale = Vector2( 0.0691983, 0.0672805 )
z_index = -1
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Level"]
margin_left = -46.501
margin_top = -140.824
margin_right = 474.499
margin_bottom = 313.176
custom_fonts/font = SubResource( 1 )
text = "0"
uppercase = true

[node name="UpperPanel" type="NinePatchRect" parent="."]
anchor_right = 1.0
margin_left = -2.13458
margin_top = 1.06731
margin_right = -2.13458
margin_bottom = 86.0673

[node name="CenterContainer" type="CenterContainer" parent="UpperPanel"]
margin_left = 106.901
margin_top = 18.2856
margin_right = 296.901
margin_bottom = 49.2856

[node name="Sprite" type="Sprite" parent="UpperPanel/CenterContainer"]
position = Vector2( 118.511, 13.5628 )
scale = Vector2( 0.765193, 0.687009 )
texture = ExtResource( 4 )

[node name="WavesCount" type="Label" parent="UpperPanel/CenterContainer"]
margin_left = 70.0
margin_top = 8.0
margin_right = 118.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
text = "10/22"

[node name="CenterContainer3" type="CenterContainer" parent="UpperPanel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -99.0
margin_top = -37.5
margin_bottom = 34.5

[node name="Menu" type="TextureButton" parent="UpperPanel/CenterContainer3"]
margin_left = 24.0
margin_top = 11.0
margin_right = 74.0
margin_bottom = 61.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CenterContainer5" type="CenterContainer" parent="UpperPanel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -228.266
margin_top = -22.3493
margin_right = -140.266
margin_bottom = 11.6507

[node name="Sprite" type="Sprite" parent="UpperPanel/CenterContainer5"]
position = Vector2( 62.515, 14.4629 )
scale = Vector2( 0.648278, 0.686823 )
texture = ExtResource( 8 )

[node name="GoldText" type="Label" parent="UpperPanel/CenterContainer5"]
margin_left = 26.0
margin_top = 7.0
margin_right = 62.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
text = "X555"

[node name="CenterContainer6" type="CenterContainer" parent="UpperPanel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -99.0
margin_top = 74.0
margin_bottom = 35.0

[node name="CheckButton" type="CheckButton" parent="UpperPanel/CenterContainer6"]
margin_left = 11.0
margin_right = 87.0
margin_bottom = 72.0
custom_icons/off = ExtResource( 9 )
custom_icons/on = ExtResource( 10 )
flat = true

[node name="PopUp" type="NinePatchRect" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )

[node name="Save" type="TextureButton" parent="PopUp"]
pause_mode = 2
margin_left = 62.0
margin_top = 222.422
margin_right = 257.0
margin_bottom = 276.422
texture_normal = ExtResource( 12 )
expand = true

[node name="Newgame" type="TextureButton" parent="PopUp"]
margin_left = 62.0
margin_top = 295.683
margin_right = 257.0
margin_bottom = 349.683
texture_normal = ExtResource( 13 )
expand = true

[node name="Quit" type="TextureButton" parent="PopUp"]
margin_left = 54.9475
margin_top = 358.683
margin_right = 244.948
margin_bottom = 419.683
texture_normal = ExtResource( 14 )
expand = true

[node name="Pause" type="TextureButton" parent="PopUp"]
pause_mode = 2
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -322.062
margin_top = 92.299
margin_right = -68.0621
margin_bottom = -97.701
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 16 )
expand = true

[node name="NinePatchRect" type="NinePatchRect" parent="PopUp"]
margin_left = 37.2369
margin_top = 32.536
margin_right = 400.237
margin_bottom = 179.536
texture = ExtResource( 17 )

[node name="TowerLIst" type="NinePatchRect" parent="."]
editor/display_folded = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -722.0
margin_top = 191.0
margin_bottom = 220.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Panel" type="Panel" parent="TowerLIst"]
visible = false
self_modulate = Color( 0, 0.917647, 1, 1 )
margin_left = 349.0
margin_top = -61.0
margin_right = 721.0
margin_bottom = 34.0

[node name="Tower1" type="TextureButton" parent="TowerLIst"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 370.865
margin_top = -60.8481
margin_right = -286.135
margin_bottom = -0.848145
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
texture_disabled = ExtResource( 19 )
expand = true
stretch_mode = 4

[node name="TextureRect" type="TextureRect" parent="TowerLIst/Tower1"]
visible = false
margin_top = -2.0
margin_right = 64.0
margin_bottom = 66.0
texture = ExtResource( 18 )
expand = true
stretch_mode = 5

[node name="Price" type="Label" parent="TowerLIst/Tower1"]
margin_left = 9.9389
margin_top = -20.341
margin_right = 49.9389
margin_bottom = -6.34097
text = "55"
align = 1

[node name="Tower2" type="TextureButton" parent="TowerLIst"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 438.092
margin_top = -68.274
margin_right = -212.908
margin_bottom = -0.274048
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 21 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_group_": true
}

[node name="Price" type="Label" parent="TowerLIst/Tower2"]
margin_left = 12.9298
margin_top = -13.4768
margin_right = 52.9298
margin_bottom = 0.523163
text = "55"
align = 1

[node name="TextureRect" type="TextureRect" parent="TowerLIst/Tower2"]
visible = false
margin_left = 1.0
margin_top = 2.0
margin_right = 74.0
margin_bottom = 70.0
texture = ExtResource( 20 )
expand = true
stretch_mode = 5

[node name="Tower3" type="TextureButton" parent="TowerLIst"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 507.274
margin_top = -68.274
margin_right = -143.726
margin_bottom = -0.274048
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 23 )
texture_disabled = ExtResource( 23 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="TowerLIst/Tower3"]
visible = false
margin_left = 1.0
margin_top = 2.0
margin_right = 74.0
margin_bottom = 70.0
texture = ExtResource( 22 )
expand = true
stretch_mode = 5

[node name="Price" type="Label" parent="TowerLIst/Tower3"]
margin_left = 13.4041
margin_top = -12.9151
margin_right = 53.4041
margin_bottom = 1.08493
text = "55"
align = 1

[node name="Tower4" type="TextureButton" parent="TowerLIst"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 576.019
margin_top = -68.5778
margin_right = -71.9811
margin_bottom = -0.57782
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 25 )
texture_disabled = ExtResource( 25 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="TowerLIst/Tower4"]
visible = false
margin_left = 1.0
margin_top = 2.0
margin_right = 74.0
margin_bottom = 70.0
texture = ExtResource( 24 )
expand = true
stretch_mode = 5

[node name="Price" type="Label" parent="TowerLIst/Tower4"]
margin_left = 11.5065
margin_top = -12.0496
margin_right = 51.5065
margin_bottom = 1.95044
text = "55"
align = 1

[node name="Tower5" type="TextureButton" parent="TowerLIst"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 646.962
margin_top = -68.5443
margin_right = -1.0376
margin_bottom = -0.544312
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 27 )
texture_disabled = ExtResource( 27 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="TowerLIst/Tower5"]
visible = false
margin_left = 1.0
margin_top = 2.0
margin_right = 74.0
margin_bottom = 70.0
texture = ExtResource( 26 )
expand = true
stretch_mode = 5

[node name="Price" type="Label" parent="TowerLIst/Tower5"]
margin_left = 14.5909
margin_top = -12.083
margin_right = 54.5909
margin_bottom = 1.91696
text = "55"
align = 1
[connection signal="pressed" from="UpperPanel/CenterContainer3/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="UpperPanel/CenterContainer6/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="button_down" from="PopUp/Save" to="." method="_on_Save_button_down"]
[connection signal="pressed" from="PopUp/Pause" to="." method="_on_Pause_pressed"]
[connection signal="button_down" from="TowerLIst/Tower1" to="." method="_on_button_down" binds= [ "Tower1" ]]
[connection signal="button_up" from="TowerLIst/Tower1" to="." method="_on_button_up" binds= [ "Tower1" ]]
[connection signal="mouse_entered" from="TowerLIst/Tower1" to="." method="_on_menu_entered"]
[connection signal="mouse_exited" from="TowerLIst/Tower1" to="." method="_on_menu_exited"]
[connection signal="button_down" from="TowerLIst/Tower2" to="." method="_on_button_down" binds= [ "Tower2" ]]
[connection signal="mouse_entered" from="TowerLIst/Tower2" to="." method="_on_menu_entered"]
[connection signal="mouse_exited" from="TowerLIst/Tower2" to="." method="_on_menu_exited"]
[connection signal="button_down" from="TowerLIst/Tower3" to="." method="_on_button_down" binds= [ "Tower3" ]]
[connection signal="mouse_entered" from="TowerLIst/Tower3" to="." method="_on_menu_entered"]
[connection signal="mouse_exited" from="TowerLIst/Tower3" to="." method="_on_menu_exited"]
[connection signal="button_down" from="TowerLIst/Tower4" to="." method="_on_button_down" binds= [ "Tower4" ]]
[connection signal="mouse_entered" from="TowerLIst/Tower4" to="." method="_on_menu_entered"]
[connection signal="mouse_exited" from="TowerLIst/Tower4" to="." method="_on_menu_exited"]
[connection signal="button_down" from="TowerLIst/Tower5" to="." method="_on_button_down" binds= [ "Tower5" ]]
[connection signal="mouse_entered" from="TowerLIst/Tower5" to="." method="_on_menu_entered"]
[connection signal="mouse_exited" from="TowerLIst/Tower5" to="." method="_on_menu_exited"]
